slight cn=hanges

--- a/profile/index.html
+++ b/profile/index.html
@@ -4,8 +4,8 @@
 	<title>My bibilography</title>
 </head>
 <body>
-<h1>Ferdous Irtiaz Khan</h1>
-<h1>Lecturer</h1>
+<h1>Mr. Ferdous Irtiaz Khan</h1>
+<h1>Lecturer, Dept. of EEE</h1>
 <h1>AUST</h1>
 </body>
 </html>
