--- a/My html codes/my_profile.html
+++ b/My html codes/my_profile.html
@@ -2,6 +2,11 @@
 <html>
 <head>
 	<title>Ferdous Irtiaz Khan</title>
+	<style>
+	h1{color: green;
+	text-align: center }	
+
+	</style>
 </head>
 <body>
 <h1>Info of Mr. Ferdous Irtiaz Khan</h1>
@@ -11,7 +16,8 @@
 <h2>Profile</h2>	
 <ul>
 <li>Name:Ferdous Irtiaz Khan</li>
-<li>Gender:Male</li>		
+<li>Gender:Male</li>
+<li>Profession: Lecturer, Ahsanullah University of Science & Technology <img src="austlogo.png" height="10" width="10" alt="AUST"></li>		
 <li>Interest:
 <ul><li>Football</li>
 	<li>Research</li>
